--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-group = 'com.example'
+
+group = 'com.example.custmservice'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -42,3 +43,8 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+jar {
+ manifest {
+ attributes 'Main-Class': 'GradleDemo'
+ }
+ }
